--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,11 @@ a{color:inherit}
 .hero-detail-label{font-size:clamp(.75rem,3vw,.875rem);opacity:.9;text-transform:uppercase;letter-spacing:.05em}
 .hero-cta{display:flex;gap:1rem;margin-top:2rem;justify-content:center;flex-wrap:wrap}
 
+@media (min-width:1024px){
+  .hero-details{ justify-content:flex-start; }
+  .hero-detail{ align-items:flex-start; text-align:left; }
+}
+
 /* Buttons */
 .btn{
   padding:1rem 2rem;border-radius:12px;font-weight:600;text-decoration:none;display:inline-flex;align-items:center;justify-content:center;gap:.5rem;
@@ -291,30 +296,84 @@ a{color:inherit}
    5) Contact Section (mobile-first + desktop)
    ========================================================= */
 .contact-section{
-  background:linear-gradient(135deg,var(--brand-1) 0%,var(--brand-2) 100%);color:#fff;text-align:center;
+  background: linear-gradient(135deg, var(--brand-1) 0%, var(--brand-2) 100%);
+  color:#fff;
+  text-align:center;
 }
+
+/* Container da seção (mesma largura do conteúdo interno) */
+.contact-section .container{
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+/* Header da seção – MESMA largura da grade */
+.contact-section .section-header{
+  max-width: 1200px;      /* <- igual à .contact-grid */
+  margin: 0 auto 3rem;    /* centraliza */
+  padding: 0 1rem;        /* mesmo padding do container */
+}
+
 .contact-grid{
-  display:grid;grid-template-columns:1fr;gap:3rem;max-width:1100px;margin:0 auto;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 3rem;
+  max-width: 1200px;      /* <- igual ao header */
+  margin: 0 auto;
 }
+
+/* 2 colunas no desktop */
+@media (min-width: 768px){
+  .contact-grid{
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
 .contact-form-container,
 .contact-card{
-  background:rgba(255,255,255,.95);backdrop-filter:blur(20px);border-radius:20px;padding:2rem;border:1px solid rgba(255,255,255,.2);color:var(--txt);
-  box-shadow:var(--shadow-2);
+  background: rgba(255,255,255,.95);
+  backdrop-filter: blur(20px);
+  border-radius: 20px;
+  padding: 2rem;
+  border: 1px solid rgba(255,255,255,.2);
+  color: var(--txt);
+  box-shadow: var(--shadow-2);
 }
+
 .contact-card{
-  background:rgba(255,255,255,.15);color:#fff;border:1px solid rgba(255,255,255,.2)
+  background: rgba(255,255,255,.15);
+  color:#fff;
+  border: 1px solid rgba(255,255,255,.2);
 }
+
 .contact-title{font-size:1.75rem;font-weight:700;margin-bottom:1rem}
 .contact-subtitle{font-size:1.125rem;margin-bottom:2rem;opacity:.9}
-.agent-info{display:flex;flex-direction:column;align-items:center;gap:.5rem;margin-bottom:2rem}
+
+.agent-info{
+  display:flex; flex-direction:column; align-items:center;
+  gap:.5rem; margin-bottom:2rem;
+}
 .agent-name{font-size:1.5rem;font-weight:600}
 .agent-company{font-size:1rem;opacity:.8;text-align:center}
+
 .contact-details{margin:2rem 0}
-.contact-item{display:flex;justify-content:space-between;align-items:center;padding:.75rem 0;border-bottom:1px solid rgba(255,255,255,.15);flex-wrap:wrap;gap:.5rem}
+.contact-item{
+  display:flex; justify-content:space-between; align-items:center;
+  padding:.75rem 0; border-bottom:1px solid rgba(255,255,255,.15);
+  flex-wrap:wrap; gap:.5rem;
+}
 .contact-item:last-child{border-bottom:none}
 .contact-item a{color:inherit;text-decoration:none;transition:color .3s ease;word-break:break-word}
 @media (hover:hover){ .contact-item a:hover{color:var(--brand-3)} }
-.urgent-contact{background:rgba(255,255,255,.1);border-radius:12px;padding:1.5rem;margin-top:2rem;text-align:center}
+
+.urgent-contact{
+  background: rgba(255,255,255,.1);
+  border-radius: 12px;
+  padding: 1.5rem;
+  margin-top: 2rem;
+  text-align: center;
+}
 
 /* Form */
 .contact-form-styled{display:flex;flex-direction:column;gap:1.5rem}
@@ -322,13 +381,17 @@ a{color:inherit}
 .form-group{display:flex;flex-direction:column}
 .form-group label{color:#2d3748;font-weight:600;margin-bottom:.5rem;font-size:.9rem}
 .form-group input,.form-group select,.form-group textarea{
-  padding:1rem;border:2px solid var(--slate-200);border-radius:12px;font-size:1rem;transition:border-color .3s ease, box-shadow .3s ease, transform .2s ease;background:#fff;
+  padding:1rem; border:2px solid var(--slate-200); border-radius:12px; font-size:1rem;
+  transition:border-color .3s ease, box-shadow .3s ease, transform .2s ease; background:#fff;
 }
 .form-group input:focus,.form-group select:focus,.form-group textarea:focus{
-  outline:none;border-color:var(--brand-1);box-shadow:0 0 0 3px rgba(102,126,234,.1);transform:translateY(-1px);
+  outline:none; border-color:var(--brand-1);
+  box-shadow:0 0 0 3px rgba(102,126,234,.1);
+  transform:translateY(-1px);
 }
 .form-group textarea{resize:vertical;min-height:120px}
 .submit-btn{margin-top:1rem;padding:1.25rem 2rem;font-size:1.1rem;position:relative;overflow:hidden}
+
 
 /* =========================================================
    6) Modal (viewer)
