--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,15 @@
     <!-- Enhanced Title Tag - Most Important for Rankings -->
     <title>House for Sale Peabody MA $949,900 | 16 Vieira Dr | 3 Bed 3 Bath Modern Home with Pool</title>
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png">
+    <meta name="theme-color" content="#667eea">
+
     <!-- Enhanced Meta Description -->
     <meta name="description" content="Beautiful 3 bedroom 3 bathroom house for sale in Peabody Massachusetts $949,900. Built 2018, heated pool, 2330 sq ft. Contact realtor Gercilaine DeSouza (857) 312-3214. Ready to move in!">
     
