--- a/public/index.html
+++ b/public/index.html
@@ -281,13 +281,14 @@ img {
   width: 100%;
 }
 
-/* HERO SECTION - MOBILE FIRST */
+/* HERO SECTION - MOBILE FIRST BOXED */
 .hero {
   min-height: 100vh;
   position: relative;
   display: flex;
   align-items: center;
   overflow: hidden;
+  padding: 2rem 0;
 }
 
 .hero-image {
@@ -310,7 +311,9 @@ img {
   position: relative;
   z-index: 2;
   width: 100%;
-  padding: 1rem;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 2rem 1rem;
   text-align: center;
   color: #fff;
 }
@@ -1248,6 +1251,161 @@ img {
     animation-duration: 0.01ms !important;
     animation-iteration-count: 1 !important;
     transition-duration: 0.01ms !important;
+  }
+}
+
+/* SHARE CARD - VERSÃO DESKTOP MELHORADA */
+.share-card {
+  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  border-radius: 24px;
+  padding: 3rem 2rem;
+  box-shadow: 0 20px 60px rgba(102, 126, 234, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  text-align: center;
+  max-width: 700px;
+  margin: 0 auto;
+  color: white;
+  position: relative;
+  overflow: hidden;
+}
+
+.share-card::before {
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  background: radial-gradient(circle, rgba(255,255,255,0.1) 0%, transparent 70%);
+  animation: float 6s ease-in-out infinite;
+}
+
+.share-card > * {
+  position: relative;
+  z-index: 2;
+}
+
+.share-card__icon {
+  font-size: 4rem;
+  margin-bottom: 1.5rem;
+  display: block;
+  text-shadow: 0 2px 10px rgba(0,0,0,0.3);
+}
+
+.share-card__title {
+  font-size: 2.5rem;
+  font-weight: 800;
+  color: white;
+  margin-bottom: 1.5rem;
+  text-shadow: 0 2px 10px rgba(0,0,0,0.3);
+}
+
+.share-card__text {
+  color: rgba(255, 255, 255, 0.9);
+  line-height: 1.7;
+  margin-bottom: 2.5rem;
+  font-size: 1.2rem;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 2.5rem;
+}
+
+.share-card__actions {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.share-btn {
+  padding: 1rem 2rem;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  font-weight: 700;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 160px;
+  text-decoration: none;
+  backdrop-filter: blur(10px);
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+}
+
+.share-btn--wa {
+  background: rgba(37, 211, 102, 0.2);
+  color: white;
+}
+
+.share-btn--wa:hover {
+  background: #25d366;
+  border-color: #25d366;
+  transform: translateY(-4px) scale(1.05);
+  box-shadow: 0 10px 30px rgba(37, 211, 102, 0.4);
+}
+
+.share-btn--email {
+  background: rgba(255, 255, 255, 0.1);
+  color: white;
+}
+
+.share-btn--email:hover {
+  background: rgba(255, 255, 255, 0.2);
+  border-color: rgba(255, 255, 255, 0.4);
+  transform: translateY(-4px) scale(1.05);
+  box-shadow: 0 10px 30px rgba(255, 255, 255, 0.2);
+}
+
+.share-btn--copy {
+  background: rgba(255, 255, 255, 0.1);
+  color: white;
+}
+
+.share-btn--copy:hover {
+  background: rgba(255, 255, 255, 0.2);
+  border-color: rgba(255, 255, 255, 0.4);
+  transform: translateY(-4px) scale(1.05);
+  box-shadow: 0 10px 30px rgba(255, 255, 255, 0.2);
+}
+
+/* MOBILE ADJUSTMENTS */
+@media (max-width: 768px) {
+  .share-card {
+    padding: 1.5rem;
+    margin: 0 1rem;
+  }
+  
+  .share-card__actions {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  
+  .share-btn {
+    width: 100%;
+    min-width: auto;
+    padding: 1rem;
+  }
+  
+  .share-card__icon {
+    font-size: 2.5rem;
+  }
+  
+  .share-card__title {
+    font-size: 1.25rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .share-card {
+    padding: 1rem;
+  }
+  
+  .share-card__text {
+    font-size: 0.9rem;
   }
 }
 </style>
