--- a/public/index.html
+++ b/public/index.html
@@ -2186,13 +2186,14 @@ img {
         <h3 class="form-title" id="quick-contact-title">Quick Contact Options</h3>
 
         <div style="display:grid;grid-template-columns:1fr;gap:1rem">
-          <!-- EMAIL -->
+          <!-- EMAIL (abre Gmail Web) -->
           <a
             class="btn"
             style="background:linear-gradient(135deg,#667eea,#764ba2);color:#fff"
-            href="mailto:gerci.usa@gmail.com?subject=Inquiry%3A%2016%20Vieira%20Dr%2C%20Peabody%20MA&body=Hello%20Gercilaine%2C%0A%0AI%27m%20interested%20in%2016%20Vieira%20Dr%2C%20Peabody%20MA.%20Could%20we%20schedule%20a%20tour%3F%0A%0AThanks!"
-            aria-label="Send an email about 16 Vieira Dr"
-            onclick="if(typeof trackEvent!=='undefined'){trackEvent('Contact','Email','mailto');}"
+            href="https://mail.google.com/mail/?view=cm&fs=1&to=gerci.usa@gmail.com&su=Inquiry%3A%2016%20Vieira%20Dr%2C%20Peabody%20MA&body=Hello%20Gercilaine%2C%0A%0AI%27m%20interested%20in%2016%20Vieira%20Dr%2C%20Peabody%20MA.%20Could%20we%20schedule%20a%20tour%3F%0A%0AThanks!"
+            target="_blank" rel="noopener"
+            aria-label="Compose email about 16 Vieira Dr in Gmail"
+            onclick="if(typeof trackEvent!=='undefined'){trackEvent('Contact','Email','gmail');}"
           >
             📧 Email Realtor
           </a>
