--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,16 @@
     <meta name="googlebot" content="index, follow">
     <link rel="canonical" href="https://16vieira.com">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WZH2GPWBS0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-WZH2GPWBS0');
+    </script>
+
     <script type="application/ld+json">
     {
   "@context": "https://schema.org",
